src/src/XamlCompiler/BuildTasks/ConditionalNamespace/ConditionalNamespaceParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ConditionalNamespace.g4 by ANTLR 4.5.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3")]
[System.CLSCompliant(false)]
public partial class ConditionalNamespaceParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, WS=7, ESCAPEDQUOTE=8, 
		QUOTE=9, DOUBLE_QUOTE=10, LPAREN=11, RPAREN=12, COMMA=13, TargetPlatformString=14, 
		PlatformUWP=15, PlatformiOS=16, PlatformAndroid=17, Digits=18, QuotedString=19, 
		IDENTIFIER=20;
	public const int
		RULE_program = 0, RULE_expression = 1, RULE_uri = 2, RULE_api_information = 3, 
		RULE_function_param = 4, RULE_target_platform_value = 5, RULE_query_string = 6, 
		RULE_query_string_component = 7, RULE_target_platform_func = 8;
	public static readonly string[] ruleNames = {
		"program", "expression", "uri", "api_information", "function_param", "target_platform_value", 
		"query_string", "query_string_component", "target_platform_func"
	};

	private static readonly string[] _LiteralNames = {
		null, "'?'", "'/'", "':'", "'-'", "'.'", "';'", null, null, "'''", "'\"'", 
		"'('", "')'", "','", "'TargetPlatform'", "'UWP'", "'iOS'", "'Android'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, "WS", "ESCAPEDQUOTE", "QUOTE", 
		"DOUBLE_QUOTE", "LPAREN", "RPAREN", "COMMA", "TargetPlatformString", "PlatformUWP", 
		"PlatformiOS", "PlatformAndroid", "Digits", "QuotedString", "IDENTIFIER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ConditionalNamespace.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public ConditionalNamespaceParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(ConditionalNamespaceParser.Eof, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 18; expression();
			State = 19; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public Microsoft.UI.Xaml.Markup.Compiler.ApiInformation ApiInformation;
		public Microsoft.UI.Xaml.Markup.Compiler.Platform TargetPlatform;
		public UriContext uri() {
			return GetRuleContext<UriContext>(0);
		}
		public Query_stringContext query_string() {
			return GetRuleContext<Query_stringContext>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.EnterExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.ExitExpression(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 2, RULE_expression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 21; uri();
			State = 22; Match(T__0);
			State = 23; query_string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UriContext : ParserRuleContext {
		public UriContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_uri; } }
		public override void EnterRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.EnterUri(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.ExitUri(this);
		}
	}

	[RuleVersion(0)]
	public UriContext uri() {
		UriContext _localctx = new UriContext(Context, State);
		EnterRule(_localctx, 4, RULE_uri);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 32;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1+1 ) {
					{
					State = 30;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
					case 1:
						{
						State = 25;
						MatchWildcard();
						}
						break;
					case 2:
						{
						State = 26; Match(T__1);
						}
						break;
					case 3:
						{
						State = 27; Match(T__2);
						}
						break;
					case 4:
						{
						State = 28; Match(T__3);
						}
						break;
					case 5:
						{
						State = 29; Match(T__4);
						}
						break;
					}
					} 
				}
				State = 34;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Api_informationContext : ParserRuleContext {
		public Microsoft.UI.Xaml.Markup.Compiler.ApiInformation ApiInformation;
		public ITerminalNode[] IDENTIFIER() { return GetTokens(ConditionalNamespaceParser.IDENTIFIER); }
		public ITerminalNode IDENTIFIER(int i) {
			return GetToken(ConditionalNamespaceParser.IDENTIFIER, i);
		}
		public ITerminalNode LPAREN() { return GetToken(ConditionalNamespaceParser.LPAREN, 0); }
		public Function_paramContext function_param() {
			return GetRuleContext<Function_paramContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(ConditionalNamespaceParser.RPAREN, 0); }
		public Api_informationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_api_information; } }
		public override void EnterRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.EnterApi_information(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.ExitApi_information(this);
		}
	}

	[RuleVersion(0)]
	public Api_informationContext api_information() {
		Api_informationContext _localctx = new Api_informationContext(Context, State);
		EnterRule(_localctx, 6, RULE_api_information);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 37;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 35; Match(IDENTIFIER);
				State = 36; Match(T__2);
				}
				break;
			}
			State = 39; Match(IDENTIFIER);
			State = 40; Match(LPAREN);
			State = 41; function_param();
			State = 42; Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Function_paramContext : ParserRuleContext {
		public string Value;
		public ITerminalNode[] LPAREN() { return GetTokens(ConditionalNamespaceParser.LPAREN); }
		public ITerminalNode LPAREN(int i) {
			return GetToken(ConditionalNamespaceParser.LPAREN, i);
		}
		public Function_paramContext[] function_param() {
			return GetRuleContexts<Function_paramContext>();
		}
		public Function_paramContext function_param(int i) {
			return GetRuleContext<Function_paramContext>(i);
		}
		public ITerminalNode[] RPAREN() { return GetTokens(ConditionalNamespaceParser.RPAREN); }
		public ITerminalNode RPAREN(int i) {
			return GetToken(ConditionalNamespaceParser.RPAREN, i);
		}
		public Function_paramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function_param; } }
		public override void EnterRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.EnterFunction_param(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.ExitFunction_param(this);
		}
	}

	[RuleVersion(0)]
	public Function_paramContext function_param() {
		Function_paramContext _localctx = new Function_paramContext(Context, State);
		EnterRule(_localctx, 8, RULE_function_param);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 51;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << WS) | (1L << ESCAPEDQUOTE) | (1L << QUOTE) | (1L << DOUBLE_QUOTE) | (1L << LPAREN) | (1L << COMMA) | (1L << TargetPlatformString) | (1L << PlatformUWP) | (1L << PlatformiOS) | (1L << PlatformAndroid) | (1L << Digits) | (1L << QuotedString) | (1L << IDENTIFIER))) != 0)) {
				{
				State = 49;
				switch (TokenStream.La(1)) {
				case T__0:
				case T__1:
				case T__2:
				case T__3:
				case T__4:
				case T__5:
				case WS:
				case ESCAPEDQUOTE:
				case QUOTE:
				case DOUBLE_QUOTE:
				case COMMA:
				case TargetPlatformString:
				case PlatformUWP:
				case PlatformiOS:
				case PlatformAndroid:
				case Digits:
				case QuotedString:
				case IDENTIFIER:
					{
					State = 44;
					_la = TokenStream.La(1);
					if ( _la <= 0 || (_la==LPAREN || _la==RPAREN) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
					    Consume();
					}
					}
					break;
				case LPAREN:
					{
					State = 45; Match(LPAREN);
					State = 46; function_param();
					State = 47; Match(RPAREN);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 53;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Target_platform_valueContext : ParserRuleContext {
		public ITerminalNode PlatformUWP() { return GetToken(ConditionalNamespaceParser.PlatformUWP, 0); }
		public ITerminalNode PlatformiOS() { return GetToken(ConditionalNamespaceParser.PlatformiOS, 0); }
		public ITerminalNode PlatformAndroid() { return GetToken(ConditionalNamespaceParser.PlatformAndroid, 0); }
		public Target_platform_valueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_target_platform_value; } }
		public override void EnterRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.EnterTarget_platform_value(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.ExitTarget_platform_value(this);
		}
	}

	[RuleVersion(0)]
	public Target_platform_valueContext target_platform_value() {
		Target_platform_valueContext _localctx = new Target_platform_valueContext(Context, State);
		EnterRule(_localctx, 10, RULE_target_platform_value);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			_la = TokenStream.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PlatformUWP) | (1L << PlatformiOS) | (1L << PlatformAndroid))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Query_stringContext : ParserRuleContext {
		public Microsoft.UI.Xaml.Markup.Compiler.ApiInformation ApiInformation;
		public Microsoft.UI.Xaml.Markup.Compiler.Platform TargetPlatform;
		public Query_string_componentContext[] query_string_component() {
			return GetRuleContexts<Query_string_componentContext>();
		}
		public Query_string_componentContext query_string_component(int i) {
			return GetRuleContext<Query_string_componentContext>(i);
		}
		public Query_stringContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_query_string; } }
		public override void EnterRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.EnterQuery_string(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.ExitQuery_string(this);
		}
	}

	[RuleVersion(0)]
	public Query_stringContext query_string() {
		Query_stringContext _localctx = new Query_stringContext(Context, State);
		EnterRule(_localctx, 12, RULE_query_string);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56; query_string_component();
			State = 61;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__5) {
				{
				{
				State = 57; Match(T__5);
				State = 58; query_string_component();
				}
				}
				State = 63;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Query_string_componentContext : ParserRuleContext {
		public Microsoft.UI.Xaml.Markup.Compiler.ApiInformation ApiInformation;
		public Microsoft.UI.Xaml.Markup.Compiler.Platform TargetPlatform;
		public Query_string_componentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_query_string_component; } }
	 
		public Query_string_componentContext() { }
		public virtual void CopyFrom(Query_string_componentContext context) {
			base.CopyFrom(context);
			this.ApiInformation = context.ApiInformation;
			this.TargetPlatform = context.TargetPlatform;
		}
	}
	public partial class QueryStringTargetPlatformContext : Query_string_componentContext {
		public Target_platform_funcContext target_platform_func() {
			return GetRuleContext<Target_platform_funcContext>(0);
		}
		public QueryStringTargetPlatformContext(Query_string_componentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.EnterQueryStringTargetPlatform(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.ExitQueryStringTargetPlatform(this);
		}
	}
	public partial class QueryStringApiInformationContext : Query_string_componentContext {
		public Api_informationContext api_information() {
			return GetRuleContext<Api_informationContext>(0);
		}
		public QueryStringApiInformationContext(Query_string_componentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.EnterQueryStringApiInformation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.ExitQueryStringApiInformation(this);
		}
	}

	[RuleVersion(0)]
	public Query_string_componentContext query_string_component() {
		Query_string_componentContext _localctx = new Query_string_componentContext(Context, State);
		EnterRule(_localctx, 14, RULE_query_string_component);
		try {
			State = 66;
			switch (TokenStream.La(1)) {
			case TargetPlatformString:
				_localctx = new QueryStringTargetPlatformContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 64; target_platform_func();
				}
				break;
			case IDENTIFIER:
				_localctx = new QueryStringApiInformationContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 65; api_information();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Target_platform_funcContext : ParserRuleContext {
		public Microsoft.UI.Xaml.Markup.Compiler.Platform TargetPlatform;
		public ITerminalNode TargetPlatformString() { return GetToken(ConditionalNamespaceParser.TargetPlatformString, 0); }
		public ITerminalNode LPAREN() { return GetToken(ConditionalNamespaceParser.LPAREN, 0); }
		public Target_platform_valueContext target_platform_value() {
			return GetRuleContext<Target_platform_valueContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(ConditionalNamespaceParser.RPAREN, 0); }
		public Target_platform_funcContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_target_platform_func; } }
		public override void EnterRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.EnterTarget_platform_func(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IConditionalNamespaceListener typedListener = listener as IConditionalNamespaceListener;
			if (typedListener != null) typedListener.ExitTarget_platform_func(this);
		}
	}

	[RuleVersion(0)]
	public Target_platform_funcContext target_platform_func() {
		Target_platform_funcContext _localctx = new Target_platform_funcContext(Context, State);
		EnterRule(_localctx, 16, RULE_target_platform_func);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68; Match(TargetPlatformString);
			State = 69; Match(LPAREN);
			State = 70; target_platform_value();
			State = 71; Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	private static string _serializedATN = _serializeATN();

	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN.ToCharArray());
}
